--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,26 @@
 {
-    "name": "andreas-weber/php-junit-merge",
+    "name": "tmaass-umg/php-junit-merge",
     "type": "library",
     "description": "PHP-Unit J-Unit XML File Merger",
-    "homepage": "https://github.com/andreas-weber/php-junit-merge",
+    "homepage": "https://github.com/tmaass-umg/php-junit-merge",
     "license": "MIT",
     "authors": [
         {
             "name": "Andreas Weber",
             "email": "code@andreas-weber.me",
             "role": "lead"
+        },
+        {
+            "name": "Tom Maass",
+            "email": "tm.cl@mailbox.org",
+            "role": "developer"
         }
     ],
     "support": {
-        "issues": "https://github.com/andreas-weber/php-junit-merge/issues"
+        "issues": "https://github.com/tmaass-umg/php-junit-merge/issues"
     },
     "require": {
-        "php": ">=5.6",
+        "php": ">=7.4",
         "symfony/console": "^5.4",
         "symfony/finder": "^5.4",
         "theseer/fdomdocument": "1.6.*"
